--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <td>
         <div class="example-container">
           <mat-form-field appearance="fill">
-            <mat-label>Input a number</mat-label>
+            <mat-label>Unix Timestamp</mat-label>
             <input matInput [(ngModel)]="from">
           </mat-form-field>
         </div>
@@ -23,7 +23,7 @@
       <td>
         <div class="example-container">
           <mat-form-field appearance="fill">
-            <mat-label>Unix timestamp</mat-label>
+            <mat-label>Time</mat-label>
             <input matInput [(ngModel)]="to">
           </mat-form-field>
         </div>
